2008-05-10  Per Bothner  <per@bothner.com>

	* Compilation.java (useClass): Call new addClass(ClassType) method,
	regardless of whether class isExisting(), because the class might be in
	a not-yet-loadable ClassType in a separate immediate-compiled module.
	* Declaration.java (load): Also note usedClass on a field's type, not
	just its declaring class.

2008-05-03  Per Bothner  <per@bothner.com>

	* ClassExp.java (compileMembers): Set encloding and inner members.
	* LambdaExp.java (enterFunction): Set enclosing member of frame.

2008-04-30  Per Bothner  <per@bothner.com>

	* LambdaExp.java (addMethodFor): If a class method has an unspecified
	parameter or return type, look to see if we can "inherit" the type
	from a super-class.

	* LambdaExp.java (setCoercedReturnType): New method.

	* FindCapturedVars.java (walkClassExp): Don't complain about static
	link for simple class if this is an anonymous inner class, as in
	the Scheme (object ...) macro.

2008-04-26  Per Bothner  <per@bothner.com>

	* ModuleMethod.java (resolveParameterTypes): Don't NPE if name is null.

	* Compilation.java (loadClassRef(String)): Remove method.
	(loadClassRef(ObjectType)): Generalize from ClassType.

	* LitTable.java (emit): Handle a Class that isPrimitive.

	* Compilation.java (compileToArchive): Do compress .zip files.

2008-03-02  Per Bothner  <per@bothner.com>

	* ClassExp.java (compile): Rename to compileMembers.
	(compile): Update accordingly.
	* ObjectExp.java: Likewise.
	* ClassInitializer.java: Likewise.

2008-02-27  Per Bothner  <per@bothner.com>

	* ConsumerTarget.java (compileFromStack): Fix lookup of Consumer
	method, specifically when the operand is a char.
	Fixes bug reported by Yaroslav Kavenchuk <kavenchuk@gmail.com>.

2008-01-16  Per Bothner  <per@bothner.com>

	* CanInline.java (inline): Take extra argsInlined parameter.
	* ApplyExp.java (walkArgs): Take extra argsInlined parameter.
	* QuoteExp.java (inline): Pass argsInlined to CanInline.inline call.
